fixed menu z-index

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -115,7 +115,7 @@ header a {
   height: 26px;
 
   cursor: pointer;
-  z-index: 1;
+  z-index: 2;
 }
 
 .menu__btn > span,
@@ -160,6 +160,7 @@ header a {
   box-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
 
   transition-duration: 0.6s;
+  z-index: 1;
 }
 
 .menu__item {
